# who-life-expectancy-analysis

./: .gitignore  README.md  main.py  pyproject.toml
data/processed/: life_expectancy_clean.csv
notebooks/: cleaning_eda.ipynb
scripts/: upload_to_supabase.py
sql/: 01_overview.sql  02_life_expectancy_trends.sql  03_status_comparison.sql  04_vaccine_analysis.sql  05_health_factors.sql  06_top_bottom_countries.sql
