[project]
name = "who-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "psycopg2-binary>=2.9.12",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.50",
    "statsmodels>=0.14.6",
    "streamlit>=1.58.0",
    "supabase>=2.30.1",
]
